--- a/fetusapp/static/style.css
+++ b/fetusapp/static/style.css
@@ -14,6 +14,10 @@
     background-color: black;
 }
 
+.inherit-text-color {
+    color: inherit;
+}
+
 .text-warning {
     --bs-text-opacity: 1;
     color: #ff4f40 !important;
@@ -42,9 +46,7 @@ h2, h5 {
     color: var(--vibrant-pink);
 }
 
-.navbar-dark .navbar-brand{
-    color: var(--vibrant-pink);
-}
+
 .form-control:focus {
     border: none;
     box-shadow: 0 0 8px 0.1rem var(--vibrant-pink);
@@ -66,16 +68,26 @@ h2, h5 {
     border-color: var(--vibrant-pink);
 }
 
+.navbar-light .navbar-brand,
+.navbar-dark .navbar-brand{
+    color: var(--vibrant-pink);
+}
 
-.navbar-dark .navbar-toggler {
+.navbar-dark .navbar-toggler,
+.navbar-light .navbar-toggler {
     border-color: var(--vibrant-pink)
 }
 
-.navbar-dark .navbar-toggler-icon {
+.navbar-dark .navbar-toggler-icon,
+.navbar-light .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28239, 83, 158, 0.99' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
-.navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .show>.nav-link {
+.navbar-dark .navbar-nav .nav-link.active, 
+.navbar-dark .navbar-nav .show>.nav-link,
+.navbar-light .navbar-nav .nav-link.active, 
+.navbar-light .navbar-nav .show>.nav-link
+ {
     color: var(--vibrant-pink);
 }
 
