--- a/fetusapp/templates/base.html
+++ b/fetusapp/templates/base.html
@@ -114,7 +114,8 @@
 
 
 
-  <footer class="footer mt-auto py-3 bg-dark text-light text-end">
+  <footer class="footer mt-auto py-3 bg-dark text-end">
+  <!-- <footer class="footer mt-auto py-3 bg-light text-end"> -->
       {% if current_user.is_authenticated %}
       <!-- User display, visible only on large screens -->
       <small class="mx-3">
