--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -5,7 +5,8 @@
 
 {% if current_user.is_authenticated %}
 
-<main class="flex-shrink-0 m-auto flex-grow-1 bg-dark" style="width: 100%;">
+<!-- <main class="flex-shrink-0 m-auto flex-grow-1 bg-light text-dark" style="width: 100%;"> -->
+<main class="flex-shrink-0 m-auto flex-grow-1 bg-dark text-light" style="width: 100%;">
 
 
     <!-- Delete Confirmation Modal -->
@@ -37,23 +38,23 @@
         </div>
     </div>
 
-    <div class="pt-2 container px-4 text-light" id="icon-grid">
+    <div class="pt-2 container px-4" id="icon-grid">
         <h2 class="zd py-2 text-center">{{ patient.first_name | proper_case}} {{ patient.last_name | proper_case}}</h2>
     </div>
 
 
-    <div class="container zd text-light">
+    <div class="container zd">
 
         <!-- Row with the general history -->
         <div class=" container px-4" id="custom-cards"> 
 
             <!-- Row with the general history -->
-            <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-3 text-bg-dark">
+            <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-3">
                 
                 
                 <!-- Section with personal details for patient and partner -->
-                <div class="col-12 col-lg-6 text-light">
-                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg bg-dark">
+                <div class="col-12 col-lg-6">
+                    <div class="card card-cover h-100 overflow-hidden rounded-4 shadow-lg bg-transparent">
                         <div class="d-flex flex-column h-100 text-shadow-1">
 
                             <!-- New content with slider card -->
@@ -254,8 +255,8 @@
                 <!-- end of section with personal details for patient and partner -->
 
                 <!-- Section with contact details -->
-                <div class="col-12 col-lg-6 text-light">
-                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg bg-dark">
+                <div class="col-12 col-lg-6">
+                    <div class="card card-cover h-100 overflow-hidden rounded-4 shadow-lg bg-transparent inherit-text-color">
                         <div class="d-flex flex-column h-100 text-shadow-1">
 
                             <!-- New content with slider card -->
@@ -338,7 +339,7 @@
         </div>
     </div>
 
-    <div class="container zd text-light py-5" style="text-align: center;">
+    <div class="container zd py-5" style="text-align: center;">
         <div class="container justify-content-center" style="display: inline-flex; text-align: center;">
         <ul class="nav nav-pills mb-3 bg-light p-2 secondary-nav-container" id="pills-tab" role="tablist">
             <li class="nav-item"  role="presentation">
