--- a/fetusapp/templates/signup.html
+++ b/fetusapp/templates/signup.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block page_title %} Διαχείριση χρήστη {% endblock
 %} {% block content %}
 
-<main class="flex-shrink-0 m-auto flex-grow-1 bg-dark">
+<main class="flex-shrink-0 m-auto flex-grow-1 bg-light">
   <div class="container zd text-light py-5" style="text-align: center;">
     <ul class="nav nav-pills mb-3 bg-light p-2 secondary-nav-container" id="pills-tab" role="tablist">
         <li class="nav-item"  role="presentation">
