--- a/fetusapp/templates/index.html
+++ b/fetusapp/templates/index.html
@@ -64,7 +64,7 @@ block content %}
           
           
           <div class="flex-grow-1" style="overflow-x: auto;">
-            <table class="table table-dark table-hover">
+            <table class="table table-dark table-striped table-hover">
               <thead>
                 <tr>
                   <th scope="col">#</th>
