--- a/fetusapp/templates/base.html
+++ b/fetusapp/templates/base.html
@@ -132,9 +132,9 @@
       
       {% else %}
       <small class="mx-3">
-        Είστε αποσυνδεμένοι (powered by pdgr54)
+        Είστε αποσυνδεμένοι! (powered by pdgr54)
       </small>
-      {% endif %}
+      {% endif %}S
   </footer>
 
   <script>
