--- a/fetusapp/templates/base.html
+++ b/fetusapp/templates/base.html
@@ -134,7 +134,7 @@
       <small class="mx-3">
         Είστε αποσυνδεμένοι! (powered by pdgr54)
       </small>
-      {% endif %}S
+      {% endif %}
   </footer>
 
   <script>
