--- a/fetusapp/templates/patient_tabs/history_medical.html
+++ b/fetusapp/templates/patient_tabs/history_medical.html
@@ -100,7 +100,19 @@
                                             {{ medical_history_form.hidden_tag() }}
                                             {{ medical_history_form.id(type="hidden") }}
                                             <h2 class="text-center mt-2">Γενικά Σχόλια</h2>
-                                            {{ medical_history_form.comments(class="form-control", placeholder="Γενικά Σχόλια", rows = 5) }}
+                                            {{ medical_history_form.comments(class="form-control", id="comments-textarea", placeholder="Γενικά Σχόλια", rows = 5) }}
+                                            <h2 class="text-center mt-2 zd-bottom">Ιατρικό Ιστορικό</h2>
+                                            <div class="row py-2">
+                                                <div class="col-12 col-lg-6 px-4">
+                                                    {% set form_elements = ['weight', 'height'] %}
+                                                </div>
+                                                <div class="col-12 col-lg-6 px-4"> right </div>
+                                            </div>
+                                            <div class="row py-2">
+                                                <div class="col-12 px-4">
+                                                    <h2 class="text-center mt-2 zd-bottom">Σύντομο Γυναικολογικό Ιστορικό</h2>
+                                                </div>
+                                            </div>
                                             <div class="d-flex flex-wrap justify-content-center gap-2 mt-3">
                                                 <button type="button" class="btn login-btn px-4" onclick="saveChangesHistoryMedical()">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-floppy" viewBox="0 1 16 16">
@@ -239,5 +251,32 @@
         }
     }
 
+    document.addEventListener('DOMContentLoaded', enableAutoResizeTextarea);
+
+    // Patch toggleEditMode to also enable auto-resize when switching to edit mode
+    const originalToggleEditMode = toggleEditMode;
+    toggleEditMode = function(sectionType) {
+        originalToggleEditMode(sectionType);
+        if (sectionType === 'HistoryMedical') {
+            // Wait for DOM update (textarea rendered)
+            setTimeout(enableAutoResizeTextarea, 0);
+        }
+    };
+
+</script>
+<script>
+// Bulletproof textarea auto-resize: runs on any click, and on input
+document.addEventListener('click', function() {
+    var ta = document.getElementById('comments-textarea');
+    if (ta && !ta._autoResizeBound) {
+        ta.style.height = 'auto';
+        ta.style.height = ta.scrollHeight + 'px';
+        ta.addEventListener('input', function() {
+            this.style.height = 'auto';
+            this.style.height = this.scrollHeight + 'px';
+        });
+        ta._autoResizeBound = true;
+    }
+});
 </script>
 {% endblock %}
