--- a/fetusapp/templates/patient_tabs/history_medical.html
+++ b/fetusapp/templates/patient_tabs/history_medical.html
@@ -105,12 +105,61 @@
                                             <div class="row py-2">
                                                 <div class="col-12 col-lg-6 px-4">
                                                     {% set form_elements = ['weight', 'height'] %}
+
+                                                    {% for element in form_elements %}
+                                                        {% set field = getattr(medical_history_form, element) %}
+                                                        {% if field.type != 'HiddenField' %}
+                                                            {{ macros.input_group(field.name, {'type': field.type, 'label': field.label.text}, field.data) }}
+                                                        {% endif %}
+                                                    {% endfor %}
+
+                                                    <h2 class="text-center mt-2 zd-bottom">Παθολογικές Καταστάσεις</h2>
+
+                                                    {% set form_elements = ['heart_disease', 'hypertension', 'diabetes', 'nephropathy', 'liver_disease', 'thyroeidopatheia', 'other_diseases', 'medication'] %}
+                                                    {% for element in form_elements %}
+                                                        {% set field = getattr(medical_history_form, element) %}
+                                                        {% if field.type != 'HiddenField' %}
+                                                            {{ macros.input_group(field.name, {'type': field.type, 'label': field.label.text}, field.data) }}
+                                                        {% endif %}
+                                                    {% endfor %}
                                                 </div>
-                                                <div class="col-12 col-lg-6 px-4"> right </div>
+                                                <div class="col-12 col-lg-6 px-4">
+                                                    {% set form_elements = ['surgeries', 'alcohol', 'transfusions_yn', 'transfusions_reactions'] %}
+                                                    {% for element in form_elements %}
+                                                        {% set field = getattr(medical_history_form, element) %}
+                                                        {% if field.type != 'HiddenField' %}
+                                                            {{ macros.input_group(field.name, {'type': field.type, 'label': field.label.text}, field.data) }}
+                                                        {% endif %}
+                                                    {% endfor %}
+                                                    <h2 class="text-center mt-2 zd-bottom">Κάπνισμα</h2>
+                                                       {% set form_elements = ['smoking_before', 'smoking_during'] %}
+                                                       {% for element in form_elements %}
+                                                           {% set field = getattr(medical_history_form, element) %}
+                                                           {% if field.type != 'HiddenField' %}
+                                                               {{ macros.input_group(field.name, {'type': field.type, 'label': field.label.text}, field.data) }}
+                                                           {% endif %}
+                                                       {% endfor %}
+
+                                                    <h2 class="text-center mt-2 zd-bottom">Αλλεργίες</h2>
+                                                        {% set form_elements = ['allergies_yn', 'allergies_to_med', 'allergies_other'] %}
+                                                        {% for element in form_elements %}
+                                                            {% set field = getattr(medical_history_form, element) %}
+                                                            {% if field.type != 'HiddenField' %}
+                                                                {{ macros.input_group(field.name, {'type': field.type, 'label': field.label.text}, field.data) }}
+                                                            {% endif %}
+                                                        {% endfor %}
+                                                </div>
                                             </div>
                                             <div class="row py-2">
                                                 <div class="col-12 px-4">
                                                     <h2 class="text-center mt-2 zd-bottom">Σύντομο Γυναικολογικό Ιστορικό</h2>
+                                                        {% set form_elements = ['test_pap', 'da', 'calt_vag_fluid'] %}
+                                                        {% for element in form_elements %}
+                                                            {% set field = getattr(medical_history_form, element) %}
+                                                            {% if field.type != 'HiddenField' %}
+                                                                {{ macros.input_group(field.name, {'type': field.type, 'label': field.label.text}, field.data) }}
+                                                            {% endif %}
+                                                        {% endfor %}
                                                 </div>
                                             </div>
                                             <div class="d-flex flex-wrap justify-content-center gap-2 mt-3">
@@ -269,8 +318,8 @@
 document.addEventListener('click', function() {
     var ta = document.getElementById('comments-textarea');
     if (ta && !ta._autoResizeBound) {
-        ta.style.height = 'auto';
-        ta.style.height = ta.scrollHeight + 'px';
+            ta.style.height = 'auto';
+            ta.style.height = ta.scrollHeight + 'px';
         ta.addEventListener('input', function() {
             this.style.height = 'auto';
             this.style.height = this.scrollHeight + 'px';
