--- a/fetusapp/templates/macros.html
+++ b/fetusapp/templates/macros.html
@@ -18,13 +18,14 @@
                 {% endfor %}
             </select>
         {% elif field_config.type == 'BooleanField' %}
-            <input type="checkbox"
-                   id="{{ field_name }}Input"
-                   name="{{ field_name }}"
-                   value="True"
-                   class="unstyled-checkbox"
-                   style="margin-left:0; float:left;"
-                   {% if value %}checked{% endif %}>
+             <input type="hidden" name="{{ field_name }}" value="False">
+             <input type="checkbox"
+                 id="{{ field_name }}Input"
+                 name="{{ field_name }}"
+                 value="True"
+                 class="unstyled-checkbox"
+                 style="margin-left:0; float:left;"
+                 {% if value %}checked{% endif %}>
         {% else %}
             <input type="{{ field_config.type }}"
                 id="{{ field_name }}Input"
