--- a/fetusapp/templates/patient_tabs/history_medical.html
+++ b/fetusapp/templates/patient_tabs/history_medical.html
@@ -1,5 +1,33 @@
-{% if medical_history %}
 {% import 'macros.html' as macros %}
+
+    <!-- Delete Confirmation Modal -->
+    <div class="modal fade" id="deleteMedicalHistoryModal" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header justify-content-center">
+                    <h5 class="modal-title text-center">Επιβεβαίωση Διαγραφής</h5>
+                </div>
+                <div class="modal-body">
+                    <p class="text-center">Είστε σίγουροι ότι θέλετε να διαγράψετε το ιατρικό ιστορικό της {{ patient.first_name | proper_case }} {{ patient.last_name | proper_case }};</p>
+                </div>
+                <div class="modal-footer justify-content-center">
+                    <button type="button" class="btn btn-outline-light px-4" data-bs-dismiss="modal">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-x-square" viewBox="0 1 16 16">
+                            <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+                        </svg>
+                        Ακύρωση
+                    </button>
+                    <button type="button" class="btn btn-danger px-4" onclick="confirmDeleteMedicalHistory()">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-trash3" viewBox="0 1 16 16">
+                            <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>
+                        </svg>
+                        Διαγραφή
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="col-12">
         <div class="card card-cover inherit-text-color bg-transparent rounded-4 shadow-lg">
@@ -8,7 +36,7 @@
                 <!-- New content with slider card -->
                 <div class="container px-0 ">
                     <div class="form-container" style="position: relative; transition: max-height 0.2s ease-in-out;" id="formContainerHistoryMedical">
-
+                        {% if medical_history %}
                         <div class="read-only read-only-labels p-4" id="readOnlyContentHistoryMedical">
                             <h3 class="text-center mt-2">Γενικά Σχόλια</h3>
 
@@ -87,10 +115,26 @@
                                     </svg>
                                     Επεξεργασία
                                 </button>
+                                <button type="button" class="btn btn-outline-danger px-4" onclick="showDeleteMedicalHistoryModal()">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-trash3" viewBox="0 1 16 16">
+                                        <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>
+                                    </svg>
+                                </button>
                             </div>
+
                         </div>
-
-
+                        {% else %}
+                            <div class="read-only read-only-labels p-4" id="readOnlyContentHistoryMedical">
+                                <p>Δεν υπάρχει καταγεγραμμένο ιατρικό ιστορικό για τον ασθενή {{ patient.first_name | proper_case }} {{ patient.last_name | proper_case }}. Για να δημιουργήσετε νέο ιατρικό ιστορικό, παρακαλώ πατήστε το κουμπί παρακάτω.</p>
+                                <button type="button" class="btn btn-outline-secondary px-4" data-edit-button="true" onclick="toggleEditMode('HistoryMedical')">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-pencil-square" viewBox="0 1 16 16">
+                                        <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                        <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+                                    </svg>
+                                    Δημιουργία Νέου Ιατρικού Ιστορικού
+                                </button>
+                            </div>
+                        {% endif %}
                         <div class="editable card card-cover rounded-4 shadow-lg" id="editableContentHistoryMedical" style="display: none;">
                             <div class="d-flex flex-column p-3 text-shadow-1">
                                 <div class="wrapper">
@@ -192,9 +236,6 @@
             </div>
         </div>
     </div>
-{% else %}
-    <p>create new</p>
-{% endif %}
 
 <style>
 
@@ -247,6 +288,34 @@
 <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
 <script>
+
+    function showDeleteMedicalHistoryModal() {
+        const deleteModal = new bootstrap.Modal(document.getElementById('deleteMedicalHistoryModal'));
+        deleteModal.show();
+    }
+
+    async function confirmDeleteMedicalHistory() {
+        const form = document.getElementById('medicalHistoryForm');
+        const historyId = form.querySelector('input[name="id"]').value;
+        try {
+            const response = await fetch(`/api/medical-history/${historyId}`, {
+                method: 'DELETE',
+                headers: { 'Content-Type': 'application/json' }
+            });
+
+            if (!response.ok) throw new Error('Delete failed');
+
+            const result = await response.json();
+            if (result.success) {
+                location.reload();
+            } else {
+                throw new Error(result.error || 'Unknown error');
+            }
+        } catch (error) {
+            console.error('Delete error:', error);
+            alert('Αποτυχία διαγραφής ιατρικού ιστορικού: ' + error.message);
+        }
+    }
 
     const editorDiv = document.querySelector('#editor');
     const initialContent = editorDiv.dataset.content;
@@ -305,6 +374,8 @@
             // Get form and mandatory fields
             const form = document.getElementById('medicalHistoryForm');
             const historyId = form.querySelector('input[name="id"]').value;
+            const patientId = '{{ patient.id }}';
+            console.log('patientId:', patientId);
             const csrfToken = form.querySelector('input[name="csrf_token"]').value;
 
             // Get form data
@@ -318,15 +389,29 @@
 
             console.log('formDataJson:', formDataJson);
 
-            // Send PUT request
-            const response = await fetch(`/api/medical-history/${historyId}`, {
-                method: 'PUT',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'X-CSRFToken': csrfToken
-                },
-                body: JSON.stringify(formDataJson)
-            });
+            let response;
+            if (historyId) {
+                // Send PUT request (update existing)
+                response = await fetch(`/api/medical-history/${historyId}`, {
+                    method: 'PUT',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-CSRFToken': csrfToken
+                    },
+                    body: JSON.stringify(formDataJson)
+                });
+            } else {
+                // Send POST request (create new)
+                formDataJson['patient_id'] = patientId;
+                response = await fetch(`/api/medical-history`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-CSRFToken': csrfToken
+                    },
+                    body: JSON.stringify(formDataJson)
+                });
+            }
 
             if (!response.ok) {
                 throw new Error(`HTTP error! status: ${response.status}`);
