--- a/fetusapp/templates/patients.html
+++ b/fetusapp/templates/patients.html
@@ -104,7 +104,7 @@
                                     <label for="mobile_phone">Κινητό Τηλ</label>
                                 </div>
                                 <div class="input-group">
-                                    <input type="email" name="email" id="" value="" required>
+                                    <input type="email" name="email" id="" value="">
                                     <label for="email">Email</label>
                                 </div>
                                 <div class="text-center pb-3">
