--- a/fetusapp/templates/macros.html
+++ b/fetusapp/templates/macros.html
@@ -15,6 +15,7 @@
                     </option>
                 {% endfor %}
             </select>
+            <label for="{{ field_name }}Input">{{ field_config.label }}</label>
         {% elif field_config.type == 'BooleanField' %}
             <input type="hidden" name="{{ field_name }}" value="False">
             <input type="checkbox"
@@ -24,12 +25,16 @@
                 class="unstyled-checkbox"
                 style="margin-left:0; float:left;"
                 {% if value %}checked{% endif %}>
+            <label for="{{ field_name }}Input">{{ field_config.label }}</label>
+        {% elif field_config.type == 'TextAreaField' %}
+            <label class="textarea-top-label" for="{{ field_name }}Input">{{ field_config.label }}</label>
+            <textarea id="{{ field_name }}Input" name="{{ field_name }}" class="form-control expanding-textarea" rows="3">{% if value is not none %}{{ value }}{% endif %}</textarea>
         {% else %}
             <input type="{{ field_config.type }}"
                 id="{{ field_name }}Input"
                 name="{{ field_name }}"
                 {% if value is not none and value != '' %}value="{{ value }}"{% endif %} required>
+            <label for="{{ field_name }}Input">{{ field_config.label }}</label>
         {% endif %}
-        <label for="{{ field_name }}Input">{{ field_config.label }}</label>
     </div>
 {% endmacro %}
