early stages of adding the tab for obs history

--- a/fetusapp/templates/patient_tabs/history_medical.html
+++ b/fetusapp/templates/patient_tabs/history_medical.html
@@ -36,7 +36,7 @@
                 <!-- New content with slider card -->
                 <div class="container px-0 ">
                     <div class="form-container" style="position: relative; transition: max-height 0.2s ease-in-out;" id="formContainerHistoryMedical">
-                        {% if medical_history %}
+                        {% if medical_history_dict %}
                         <div class="read-only read-only-labels p-4" id="readOnlyContentHistoryMedical">
                             <h3 class="text-center mt-2">Γενικά Σχόλια</h3>
 
