--- a/fetusapp/static/style.css
+++ b/fetusapp/static/style.css
@@ -353,6 +353,7 @@ em {
 #editableContentCD,
 #editableContentPD,
 #editableContentHistoryMedical,
+#editableContentHistoryObstetrics,
 .modal-content {
     background: var(--warm-beige);
     color: black;
